# discord

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  readme.md
.cargo/: config.toml
