[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.dependencies]
discord-api = { path = "crates/discord-api" }
discord-api-docs = { path = "crates/discord-api-docs" }
discord-dev = { path = "crates/discord-dev" }
discord-napi = { path = "crates/discord-napi" }
discord-rest = { path = "crates/discord-rest" }
discord-websocket = { path = "crates/discord-websocket" }

turbopack-binding = { path = "crates/turbopack-binding" }

anyhow = "1.0.98"
futures = "0.3.26"
once_cell = "1.17.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
lazy_static = "1.4.0"
regex = "1.10.6"
rustc-hash = "2.1.1"
tokio = "1.43.0"
tokio-util = { version = "0.7.13", features = ["io", "rt"] }
tokio-tungstenite = "0.19"
reqwest = { version = "0.12.20", default-features = false }
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
  "tokio_rt",
  "error_anyhow",
  # Lightningcss uses this features
  # "napi4",
  "napi5",
  "compat-mode",
] }
napi-derive = "2"
parking_lot = "0.12.1"
